k8s/03-feeder-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotefeeder-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotefeeder
  template:
    metadata:
      labels:
        app: quotefeeder
    spec:
      containers:
      - name: quotefeeder-container
        image: huferry/quote-feeder:1
