k8s/04-view-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quoteview-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quoteview
  template:
    metadata:
      labels:
        app: quoteview
    spec:
      containers:
      - name: quoteview-container
        image: huferry/quote-view:8
        ports:
        - name: quote-view-port
          containerPort: 80
