k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:      
      - name: rabbitmq-container
        image: rabbitmq:3-management
        ports:
        - name: amqp-port
          containerPort: 5672
        - name: amqp-mgm-port
          containerPort: 15672
