k8s/02-queue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quotes-amqp-service
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: amqp-port
      name: amqp
    - protocol: TCP
      port: 15672
      targetPort: amqp-mgm-port
      name: amqp-mgm
  type: NodePort
