k8s/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quotes-view-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: quotesview.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quotes-view-service
                port:
                  number: 8080
